--- a/index.html
+++ b/index.html
@@ -11,7 +11,43 @@
 </head>
 
 <body>
-
+    <main>
+        <div class="row">
+            <nav class="col-3">
+                <div id="rooms">
+                    <h2>Rooms</h2>
+                    <ul>
+                        <li>un</li>
+                        <li>deux</li>
+                        <li>trois</li>
+                    </ul>
+                </div>
+                <div id="users">
+                    <h2>Users</h2>
+                    <ul>
+                        <li>premier</li>
+                        <li>deuxième</li>
+                        <li>troisième</li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="col-9">
+                <div id="chat">
+                    <h2>Chat</h2>
+                    <ul>
+                        <li>first message</li>
+                        <li>second message</li>
+                        <li>third message</li>
+                    </ul>
+                </div>
+                <div id="envoi" class="row">
+                    <div class="col-2" id="pseudo">pseudo</div>
+                    <input type="text" name="message" id="message">
+                    <input type="submit" value="Envoyer" id="bouton">
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
